force-app/main/default/objects/BMCServiceDesk__FAQ__c/BMCServiceDesk__FAQ__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for FAQs.</description>
    <label>FAQ</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>FAQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>