force-app/main/default/objects/BMCServiceDesk__FAQ__c/fields/BMCServiceDesk__Answer__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Answer__c</fullName>
    <inlineHelpText>Use this field to enter the answer to the frequently asked question.</inlineHelpText>
    <label>Answer</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>