force-app/main/default/objects/BMCServiceDesk__FAQ__c/fields/BMCServiceDesk__Rating__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Rating__c</fullName>
    <description>Average of Rating</description>
    <formula>IF(BMCServiceDesk__Total_Feedback__c == 0, 0 , BMCServiceDesk__RatingSum__c  /  BMCServiceDesk__Total_Feedback__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>