force-app/main/default/objects/BMCServiceDesk__FAQ__c/fields/BMCServiceDesk__RatingSum__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RatingSum__c</fullName>
    <description>Sum of rating through rollup summary field</description>
    <label>RatingSum</label>
    <summarizedField>BMCServiceDesk__FAQ_Feedback__c.BMCServiceDesk__Rating__c</summarizedField>
    <summaryForeignKey>BMCServiceDesk__FAQ_Feedback__c.BMCServiceDesk__FKFAQ__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>