force-app/main/default/objects/BMCServiceDesk__FAQ__c/fields/BMCServiceDesk__Total_Feedback__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Total_Feedback__c</fullName>
    <description>Total number of feedback</description>
    <label>Total Feedback</label>
    <summaryForeignKey>BMCServiceDesk__FAQ_Feedback__c.BMCServiceDesk__FKFAQ__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>