force-app/main/default/objects/BMCServiceDesk__FAQ__c/validationRules/BMCServiceDesk__FAQRule1.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__FAQRule1</fullName>
    <active>true</active>
    <description>Rule for checking if Category not equal to null</description>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKFAQ_Category__c) , ISBLANK(BMCServiceDesk__FKFAQ_Category__c))</errorConditionFormula>
    <errorMessage>Please select a FAQ Category.</errorMessage>
</ValidationRule>