force-app/main/default/objects/BMCServiceDesk__FAQ__c/validationRules/BMCServiceDesk__FAQRule2.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__FAQRule2</fullName>
    <active>true</active>
    <description>Rule for checking if Question not equal to null</description>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__Question__c) , ISBLANK(BMCServiceDesk__Question__c))</errorConditionFormula>
    <errorMessage>Please enter a Question.</errorMessage>
</ValidationRule>