force-app/main/default/objects/BMCServiceDesk__FAQ__c/validationRules/BMCServiceDesk__FAQRule3.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__FAQRule3</fullName>
    <active>true</active>
    <description>Rule for checking if Answer not equal to null</description>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__Answer__c) , ISBLANK(BMCServiceDesk__Answer__c))</errorConditionFormula>
    <errorMessage>Please enter an Answer.</errorMessage>
</ValidationRule>