force-app/main/default/objects/BMCServiceDesk__FAQ__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Question__c</columns>
    <columns>BMCServiceDesk__Answer__c</columns>
    <columns>BMCServiceDesk__Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>